2005-09-09  Josh Conner  <jconner@apple.com>

	* g++.dg/init/pr23180-1.C: Removed.
	* g++.dg/init/pr23180-2.C: Removed.

2005-09-09  David Daney <ddaney@avtrex.com>

	* gcc.c-torture/execute/20010124-1.c:  Removed and split into two new 
	files which are ...
	* gcc.c-torture/execute/builtins/20010124-1: ... here and ...
	* gcc.c-torture/execute/builtins/20010124-1-lib.c: ... here.

2005-09-09  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	* gfortran.dg/iostat_2.f90: New test.

2005-09-09  Mark Mitchell  <mark@codesourcery.com>

	PR c++/22252
	* g++.dg/ext/interface1.C: New test.
	* g++.dg/ext/interface1.h: Likewise.
	* g++.dg/ext/interface1a.cc: Likewise.

2005-09-09  Thomas Koenig  <Thomas.Koenig@online.de>

	* gfortran.dg/iomsg_1.f90:  New test case.

2005-09-09  Richard Guenther  <rguenther@suse.de>

	PR c++/23624
	* g++.dg/tree-ssa/pr23624.C: New testcase.

2005-09-09  Richard Sandiford  <richard@codesourcery.com>

	PR fortran/19239
	* gfortran.dg/vector_subscript_1.f90,
	* gfortran.dg/vector_subscript_2.f90: New tests.

2005-09-09  Richard Sandiford  <richard@codesourcery.com>

	PR fortran/21104
	* gfortran.dg/array_alloc_1.f90,
	* gfortran.dg/array_alloc_2.f90,
	* gfortran.dg/array_alloc_3.f90: New tests.

2005-09-09  Richard Sandiford  <richard@codesourcery.com>

	PR fortran/12840
	* gfortran.dg/array_constructor_6.f90
	* gfortran.dg/array_constructor_7.f90
	* gfortran.dg/array_constructor_8.f90
	* gfortran.dg/array_constructor_9.f90
	* gfortran.dg/array_constructor_10.f90
	* gfortran.dg/array_constructor_11.f90
	* gfortran.dg/array_constructor_12.f90: New tests.

2005-09-08  Josh Conner  <jconner@apple.com>

	PR c++/23180
	* g++.dg/init/pr23180-1.C: New test.
	* g++.dg/init/pr23180-2.C: New test.

2005-09-09  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/18878
	* gfortran.dg/module_double_reuse.f90: New.

2005-09-09  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/23270
	PR fortran/22304
	PR fortran/18870
	PR fortran/17917
	PR fortran/16511